add description for error_saml_invalid_ticket

--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -6,3 +6,4 @@ es:
   text_full_logout_proposal: Tal vez quiera %{value} antes de intentar con otro usuario
   text_logout_from_saml: cerrar su sesión SSO
   label_onthefly_creation: Crear usuarios automáticamente?
+  error_saml_invalid_ticket: Invalid IDP cert fingerprint
