--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -1,7 +1,7 @@
 de:
   error_saml_invalid_ticket: Ungültiges SAML Ticket
   label_login_page_text: Anmeldeseite Text
-  label_login_with_saml: Mit SAML anmelden
+  label_login_with_saml: Mit SSO anmelden
   label_onthefly_creation: Benutzer automatisch anlegen?
   label_replace_redmine_login: Redmine Anmeldeseite ersetzen
   label_saml_enabled: SAML Authentifizierung aktivieren
