Add configuration ifnos

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -8,3 +8,4 @@ de:
   notice_account_invalid_credentials: Ungültige Zugangsdaten
   text_full_logout_proposal: You may want to %{value} before trying an other username.
   text_logout_from_saml: SSO Sitzung schliessen
+  label_saml_test_plural: Tests
