--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,10 +1,10 @@
 en:
   error_saml_invalid_ticket: Invalid SAML ticket
-  label_login_page_text: Login page text
-  label_login_with_saml: Login with SSO
   label_onthefly_creation: Create users automatically?
   label_replace_redmine_login: Replace Redmine login page
   label_saml_enabled: Enable SAML authentication
+  label_saml_login_label: Login page text
   label_saml_test_plural: Tests
+  saml_login_label: Login with SSO
   text_full_logout_proposal: You may want to %{value} before trying an other username.
   text_logout_from_saml: close SSO session
