--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -1,10 +1,10 @@
 es:
   error_saml_invalid_ticket: Invalid IDP cert fingerprint
-  label_login_page_text: Login page text
-  label_login_with_saml: Acceder usando SSO
   label_onthefly_creation: Crear usuarios automáticamente?
   label_replace_redmine_login: Reemplazar el login de Redmine
   label_saml_enabled: Habilitar autenticación SAML
+  label_saml_login_label: Login page text
   label_saml_test_plural: Tests
+  saml_login_label: Acceder usando SSO
   text_full_logout_proposal: Tal vez quiera %{value} antes de intentar con otro usuario
   text_logout_from_saml: cerrar su sesión SSO
