--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,6 +1,6 @@
 en:
   error_saml_authenticity_error: SAML authentication error
-  error_saml_invalid_ticket: Invalid SAML ticket
+  error_saml_invalid_ticket: Invalid SAML ticket (check IDP cert /IDP cert fingerprint)
   label_onthefly_creation: Create users automatically?
   label_replace_redmine_login: Replace Redmine login page
   label_saml_enabled: Enable SAML authentication
